--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link type="text/css" rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui.css">
+        <script src="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui-bundle.js" crossorigin></script>
         <title>AMP API Status Wrapper</title>
-        <style>
-            body {
-                font-family: Arial, Helvetica, sans-serif;
-            }
-        </style>
     </head>
     <body>
-        <h1>AMP API Status Wrapper</h1>
+        <div id="swagger-ui">
+        </div>
+
+        <script>
+            const ui = SwaggerUIBundle({
+                url: '/openapi.json',
+                "dom_id": "#swagger-ui",
+                "layout": "BaseLayout",
+                "deepLinking": true,
+                "showExtensions": true,
+                "showCommonExtensions": true,
+                // oauth2RedirectUrl: window.location.origin + '/docs/oauth2-redirect',
+                presets: [
+                    SwaggerUIBundle.presets.apis,
+                    SwaggerUIBundle.SwaggerUIStandalonePreset
+                ],
+            })
+        </script>
     </body>
 </html>
